# gamelibs-jemalloc

./: Makefile  meson.build
include/jemalloc/internal/: atomic_msvc.h  jemalloc_internal_inlines_a.h  jemalloc_internal_types.h  quantum.h
linux/include/jemalloc/: jemalloc.h  jemalloc_defs.h  jemalloc_macros.h  jemalloc_mangle.h  jemalloc_mangle_jet.h  jemalloc_rename.h
linux/include/jemalloc/internal/: jemalloc_internal_defs.h  private_symbols.awk  private_symbols_jet.awk  public_namespace.h  public_symbols.txt  public_unnamespace.h
macosx/include/jemalloc/: jemalloc.h  jemalloc_defs.h  jemalloc_mangle.h  jemalloc_mangle_jet.h  jemalloc_rename.h
macosx/include/jemalloc/internal/: jemalloc_internal_defs.h  private_symbols.awk  private_symbols_jet.awk  public_namespace.h  public_symbols.txt  public_unnamespace.h
mingw/include/jemalloc/: jemalloc.h  jemalloc_defs.h  jemalloc_macros.h  jemalloc_mangle.h  jemalloc_mangle_jet.h  jemalloc_rename.h
mingw/include/jemalloc/internal/: jemalloc_internal_defs.h  private_symbols.awk  private_symbols_jet.awk  public_namespace.h  public_symbols.txt  public_unnamespace.h
msvc/include/jemalloc/: jemalloc.h  jemalloc_defs.h  jemalloc_macros.h  jemalloc_mangle.h  jemalloc_mangle_jet.h  jemalloc_rename.h
msvc/include/jemalloc/internal/: jemalloc_internal_defs.h  private_symbols.awk  private_symbols_jet.awk  public_namespace.h  public_symbols.txt  public_unnamespace.h
msvc/projects/vc2017/jemalloc/: jemalloc.vcxproj  jemalloc.vcxproj.filters
src/: arena.c  extent.c  nstime.c  stats.c
